--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "lint": "next lint",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
-    "db:seed": "bun run lib/db/seed.ts"
+    "db:seed": "tsx lib/db/seed.ts"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.4",
-    "better-sqlite3": "^11.0.0",
+    "better-sqlite3": "^11.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.33.0",
@@ -25,16 +25,17 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.11",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/better-sqlite3": "^7.6.11",
-    "typescript": "^5",
+    "autoprefixer": "^10.0.1",
+    "drizzle-kit": "^0.24.0",
     "eslint": "^8",
     "eslint-config-next": "^14.2.0",
-    "tailwindcss": "^3.4.0",
     "postcss": "^8",
-    "autoprefixer": "^10.0.1",
-    "drizzle-kit": "^0.24.0"
+    "tailwindcss": "^3.4.0",
+    "tsx": "^4.20.6",
+    "typescript": "^5"
   }
 }
